[package]
name = "gmtk_jam_2021"
version = "0.1.0"
authors = ["gerodrus <gerodrus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
ron = "0.6"
macroquad = "= 0.3.3"
miniquad = "= 0.3.0-alpha.30"
sapp-wasm = "= 0.1.24"

[profile.dev.package.'*']
opt-level = 3

[features]
wasm-bindgen = []
